deploy: 3bca1f3192d0e2fb48d11978b6169096cb08aa32

--- a/A67_43.html
+++ b/A67_43.html
@@ -98,12 +98,12 @@
             <div class="wp-transcript">
                <div class="row" id="edition_metadata">
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
-                     <h1>A 67/43</h1>
-                     <p class="document_info"></p>
-                     <p class="document_info archival_small"></p>
-                     <p class="document_info archival_small"> (codex )</p>
-                     <p class="document_info archival_small"></p>
-                     <div class="revision_desc created"> maschinell erfasster Rohtext </div>
+                     <h1 align="center">A 67/43</h1>
+                     <h3 align="center"><a href="A67_43.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
+                     <p class="document_info archival_small" align="center"></p>
+                     <p class="document_info archival_small" align="center"> (codex )</p>
+                     <p class="document_info archival_small" align="center"></p>
+                     <div align="center" class="revision_desc created"> maschinell erfasster Rohtext </div>
                   </div>
                </div>
                <div id="container-resize" class="row transcript active">
