--- a/S1_39.html
+++ b/S1_39.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html class="h-100">
+<!DOCTYPE html><html class="h-100">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta  http-equiv="X-UA-Compatible" content="IE=edge">
@@ -87,32 +87,19 @@
                   <div id="text-resize" lang="de" class="col-md-6 col-lg-6 col-sm-12 text yes-index">
                      <div id="section">
                         <div class="card-body non_mimetic_lbs">
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-001r/full/full/0/default.jpg" n="1" style="--page_before: '0'; --beginning_page: '1';">
-                              <hr n="1"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-001v/full/full/0/default.jpg" n="2" style="--page_before: '1'; --beginning_page: '2';">
-                              <hr n="2"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-002r/full/full/0/default.jpg" n="3" style="--page_before: '2'; --beginning_page: '3';">
-                              <hr n="3"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-002v/full/full/0/default.jpg" n="4" style="--page_before: '3'; --beginning_page: '4';">
-                              <hr n="4"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-003r/full/full/0/default.jpg" n="5" style="--page_before: '4'; --beginning_page: '5';">
-                              <hr n="5"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-003v/full/full/0/default.jpg" n="6" style="--page_before: '5'; --beginning_page: '6';">
-                              <hr n="6"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-004r/full/full/0/default.jpg" n="7" style="--page_before: '6'; --beginning_page: '7';">
-                              <hr n="7"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-004v/full/full/0/default.jpg" n="8" style="--page_before: '7'; --beginning_page: '8';">
-                              <hr n="8"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-005r/full/full/0/default.jpg" n="9" style="--page_before: '8'; --beginning_page: '9';">
-                              <hr n="9"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-005v/full/full/0/default.jpg" n="10" style="--page_before: '9'; --beginning_page: '10';">
-                              <hr n="10"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-006r/full/full/0/default.jpg" n="11" style="--page_before: '10'; --beginning_page: '11';">
-                              <hr n="11"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-006v/full/full/0/default.jpg" n="12" style="--page_before: '11'; --beginning_page: '12';">
-                              <hr n="12"></span>
-                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-BR/full/full/0/default.jpg" n="13" style="--page_before: '12'; --beginning_page: '13';">
-                              <hr n="13"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-001r/full/full/0/default.jpg" n="1" style="--page_before: '0'; --beginning_page: '1';"></span><span class="pb_marker" n="1"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-001v/full/full/0/default.jpg" n="2" style="--page_before: '1'; --beginning_page: '2';"></span><span class="pb_marker" n="2"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-002r/full/full/0/default.jpg" n="3" style="--page_before: '2'; --beginning_page: '3';"></span><span class="pb_marker" n="3"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-002v/full/full/0/default.jpg" n="4" style="--page_before: '3'; --beginning_page: '4';"></span><span class="pb_marker" n="4"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-003r/full/full/0/default.jpg" n="5" style="--page_before: '4'; --beginning_page: '5';"></span><span class="pb_marker" n="5"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-003v/full/full/0/default.jpg" n="6" style="--page_before: '5'; --beginning_page: '6';"></span><span class="pb_marker" n="6"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-004r/full/full/0/default.jpg" n="7" style="--page_before: '6'; --beginning_page: '7';"></span><span class="pb_marker" n="7"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-004v/full/full/0/default.jpg" n="8" style="--page_before: '7'; --beginning_page: '8';"></span><span class="pb_marker" n="8"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-005r/full/full/0/default.jpg" n="9" style="--page_before: '8'; --beginning_page: '9';"></span><span class="pb_marker" n="9"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-005v/full/full/0/default.jpg" n="10" style="--page_before: '9'; --beginning_page: '10';"></span><span class="pb_marker" n="10"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-006r/full/full/0/default.jpg" n="11" style="--page_before: '10'; --beginning_page: '11';"></span><span class="pb_marker" n="11"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-006v/full/full/0/default.jpg" n="12" style="--page_before: '11'; --beginning_page: '12';"></span><span class="pb_marker" n="12"></span>
+                           <span class="anchor-pb"></span><span class="pb" source="https://viewer.acdh.oeaw.ac.at/viewer/api/v1/records/S1_39/files/images/A-Gf_S1_39-BR/full/full/0/default.jpg" n="13" style="--page_before: '12'; --beginning_page: '13';"></span><span class="pb_marker" n="13"></span>
                            </div>
                      </div>
                   </div>
@@ -131,10 +118,10 @@
                   <div class="footer-widget col-lg-3 col-md-4 col-sm-3 ml-auto">
                      <div class="textwidget custom-html-widget">
                         <h6 class="font-weight-bold">ACDH-CH</h6>
-                        <p>Austrian Centre for Digital Humanities <br/> and Cultural Heritage
-                           <br/> Österreichische Akademie der Wissenschaften </p>
-                        <p> Bäckerstraße 13 <br/> 1010 Wien </p>
-                        <p> T: +43 1 51581-2200 <br/> E: <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at                                 ">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
+                        <p>Austrian Centre for Digital Humanities <br /> and Cultural Heritage
+                           <br /> Österreichische Akademie der Wissenschaften </p>
+                        <p> Bäckerstraße 13 <br /> 1010 Wien </p>
+                        <p> T: +43 1 51581-2200 <br /> E: <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at                                 ">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
                      </div>
                   </div>
                   <div class="footer-widget col-lg-3 col-md-4 col-sm-3 ml-auto">
