--- a/about.html
+++ b/about.html
@@ -63,22 +63,24 @@
       <main class="flex-grow-1">
          <div class="container-md">
             <h1 class="text-center pb-4 pt-3">Über das Projekt</h1>
-            
-            <p id="d6e49"> Scholarly Digital Editions sind eine revolutionäre Art, historische Texte und
-               Dokumente in einem modernen und zugänglichen Format zu präsentieren. Diese Editionen
-               verwenden digitale Technologien, um eine angereicherte und interaktive Version des
-               Originaltexts darzustellen, die es Lesern ermöglicht, das Material auf neue Weise
-               zu
-               erkunden und zu nutzen. Sie bieten Wissenschaftlern ein mächtiges Werkzeug für
-               Forschung und Analyse sowie eine Plattform, um ihre Arbeit einem breiteren Publikum
-               zugänglich zu machen. Darüber hinaus können digitale Editionen eine genauere und
-               zuverlässigere Version eines Textes bieten, indem sie fortschrittliche Techniken wie
-               Bildverbesserung, Transkription und Textanalyse einsetzen. Da sich das Feld der
-               digitalen Geisteswissenschaften weiterentwickelt, wird die Entwicklung von Scholarly
-               Digital Editions immer wichtiger und wird voraussichtlich die Art und Weise
-               revolutionieren, wie wir historische Texte und Dokumente studieren und verstehen.
-               </p>
-            </div>
+            <div class="container-fluid">
+               
+               <p id="d6e49"> Scholarly Digital Editions sind eine revolutionäre Art, historische Texte und
+                  Dokumente in einem modernen und zugänglichen Format zu präsentieren. Diese Editionen
+                  verwenden digitale Technologien, um eine angereicherte und interaktive Version des
+                  Originaltexts darzustellen, die es Lesern ermöglicht, das Material auf neue Weise
+                  zu
+                  erkunden und zu nutzen. Sie bieten Wissenschaftlern ein mächtiges Werkzeug für
+                  Forschung und Analyse sowie eine Plattform, um ihre Arbeit einem breiteren Publikum
+                  zugänglich zu machen. Darüber hinaus können digitale Editionen eine genauere und
+                  zuverlässigere Version eines Textes bieten, indem sie fortschrittliche Techniken wie
+                  Bildverbesserung, Transkription und Textanalyse einsetzen. Da sich das Feld der
+                  digitalen Geisteswissenschaften weiterentwickelt, wird die Entwicklung von Scholarly
+                  Digital Editions immer wichtiger und wird voraussichtlich die Art und Weise
+                  revolutionieren, wie wir historische Texte und Dokumente studieren und verstehen.
+                  </p>
+               </div>
+         </div>
       </main>
       <footer  class="footer">
          <div class="container-fluid" id="footer-full-content" tabindex="-1">
