--- a/search.html
+++ b/search.html
@@ -60,7 +60,7 @@
             </div>
          </nav>
       </div>
-      <div class="container flex-grow-1">
+      <div class="container flex-1">
          <h1 class="text-center pb-4 pt-3">Volltextsuche</h1>
       </div>
       <footer  class="footer">
