deploy: ed55acec523e358464d75a2df28b1e7ac27d83cd

--- a/A67_17.html
+++ b/A67_17.html
@@ -1643,16 +1643,16 @@
          </div>
       </div>
       <footer  class="footer">
-         <div class="container-fluid" id="footer-full-content" tabindex="-1">
-            <div class="footer-separator justify-content-center">
+         <div class="container-fluid" id="footer-full-content" tabindex="-1 overflow-hidden">
+            <div class="footer-separator justify-content-center overflow-hidden">
                <h5 class="font-weight-bold">KONTAKT</h5>
             </div>
             <div class="row justify-content-center">
                <div class="footer-widget col-lg-1 col-md-2 col-sm-2 col-xs-6 text-center ">
                   <div class="textwidget custom-html-widget"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image" alt="ACDH Logo" style="max-width: 90%; height: auto;" title="ACDH Logo"></a></div>
                </div>
-               <div class="footer-widget col-lg-3 col-md-4 col-sm-3">
-                  <div class="textwidget custom-html-widget">
+               <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
+                  <div class="textwidget custom-html-widget overflow-hidden">
                      <h6 class="font-weight-bold">ACDH-CH</h6>
                      <p>Austrian Centre for Digital Humanities <br /> and Cultural Heritage
                         <br /> Österreichische Akademie der Wissenschaften </p>
@@ -1660,7 +1660,7 @@
                      <p> T: +43 1 51581-2200 <br /> E: <a href="mailto:acdh-ch-helpdesk@oeaw.ac.at                                 ">acdh-ch-helpdesk(at)oeaw.ac.at</a></p>
                   </div>
                </div>
-               <div class="footer-widget col-lg-3 col-md-4 col-sm-3">
+               <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
                   <div class="row">
                      <div class="textwidget custom-html-widget">
                         <h6 class="font-weight-bold">HELPDESK</h6>
