deploy: 3fbc5e2381d595c5fabbab94798dd1b4bc195e5f

--- a/S1_61.html
+++ b/S1_61.html
@@ -345,8 +345,8 @@
             <div class="footer-separator justify-content-center overflow-hidden">
                <h5 class="font-weight-bold">KONTAKT</h5>
             </div>
-            <div class="row justify-content-center">
-               <div class="footer-widget col-lg-1 col-md-2 col-sm-2 col-xs-6 text-center ">
+            <div class="row justify-content-center overflow-hidden">
+               <div class="footer-widget col-lg-1 col-md-2 col-sm-2 col-xs-6 text-center overflow-hidden">
                   <div class="textwidget custom-html-widget"><a href="https://www.oeaw.ac.at/acdh/"><img src="https://fundament.acdh.oeaw.ac.at/common-assets/images/acdh_logo.svg" class="image" alt="ACDH Logo" style="max-width: 90%; height: auto;" title="ACDH Logo"></a></div>
                </div>
                <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
