deploy: a88b6dc17c12baa8905751af23ffbf8cd2094773

--- a/S1_25.html
+++ b/S1_25.html
@@ -205,7 +205,7 @@
                </div>
                <div class="footer-widget col-lg-3 col-md-4 col-sm-3 overflow-hidden">
                   <div class="row">
-                     <div class="textwidget custom-html-widget">
+                     <div class="textwidget custom-html-widget overflow-hidden">
                         <h6 class="font-weight-bold">HELPDESK</h6>
                         <p>Bei Fragen, Anmerkungen, Kritik, aber gerne auch Lob, wenden Sie
                            sich bitte an den ACDH-CH Helpdesk.</p>
