--- a/listplace.html
+++ b/listplace.html
@@ -65,7 +65,7 @@
             <h1 class="text-center pb-4 pt-3">Orte</h1>
             <div id="places_div"></div>
             <div class="container-fluid">
-               <table id="myTable" class="table">
+               <table class="table" id="myTable">
                   <thead>
                      <tr>
                         <th scope="col" tabulator-formatter="html">Name</th>
