deploy: 12aba270f82d3165cff17549d72e8a43b3aa2dd4

--- a/books.html
+++ b/books.html
@@ -69,7 +69,7 @@
                   
                   <h2 class="text-center display-5">Die Bücher</h2>
                   
-                  <p id="d7e70">Fabula generale nomen est : eius duae primae partes sunt, tragoedia et eomoedia. Si
+                  <p id="d7e70">Fabula generale nomen est : eius duae primae partes sunt, tragoedia et comoedia. Si
                      Latina argumentatio sit, praetextata dicitur. Comoedia autem multas species habet.
                      Aut enim palliata est aut togata aut tabernaria aut Atellana aut mimus aut Rhinthonica
                      aut planipedia. Planipedia autem dicta ob humilitatem argumenti eius ac vilitatem
