--- a/listplace.html
+++ b/listplace.html
@@ -64,7 +64,7 @@
          <div class="container">
             <h1 class="text-center pb-4 pt-3">Orte</h1>
             <div id="places_div"></div>
-            <div class="container-fluid table">
+            <div class="container-fluid table overflow-scroll">
                <table class="table" id="myTable">
                   <thead>
                      <tr>
