--- a/search.html
+++ b/search.html
@@ -60,9 +60,11 @@
             </div>
          </nav>
       </div>
-      <div class="container flex-1">
-         <h1 class="text-center pb-4 pt-3">Volltextsuche</h1>
-      </div>
+      <main class="flex-grow-1 overflow-hidden">
+         <div class="container flex-1">
+            <h1 class="text-center pb-4 pt-3">Volltextsuche</h1>
+         </div>
+      </main>
       <footer  class="footer">
          <div class="container-fluid" id="footer-full-content" tabindex="-1 overflow-hidden">
             <div class="footer-separator justify-content-center overflow-hidden">
