deploy: c3b1e24d86c0262097d518ff3f8cb868706ef971

--- a/listplace.html
+++ b/listplace.html
@@ -68,12 +68,12 @@
                <table class="table" id="myTable">
                   <thead>
                      <tr>
-                        <th scope="col" tabulator-formatter="html">Name</th>
+                        <th scope="col" tabulator-formatter="html" tabulator-responsive="0" tabulator-headerFilter="input">Name</th>
                         <th scope="col" tabulator-visible="false">lat</th>
                         <th scope="col" tabulator-visible="false">lng</th>
                         <th scope="col" tabulator-visible="false">id</th>
-                        <th scope="col" tabulator-formatter="html">Normdaten</th>
-                        <th scope="col" tabulator-formatter="html">Objekte</th>
+                        <th scope="col" tabulator-formatter="html" tabulator-responsive="1">Normdaten</th>
+                        <th scope="col" tabulator-formatter="html" tabulator-responsive="2" tabulator-headerFilter="input">Objekte</th>
                      </tr>
                   </thead>
                   <tbody>
