--- a/toc.html
+++ b/toc.html
@@ -66,12 +66,12 @@
             <table class="table" id="myTable">
                <thead>
                   <tr>
-                     <th scope="col" tabulator-formatter="html">Titel</th>
-                     <th scope="col" tabulator-formatter="html">XML-TEI</th>
-                     <th scope="col">TPQ</th>
+                     <th scope="col" tabulator-formatter="html" tabulator-responsive="0" tabulator-headerFilter="input">Titel</th>
+                     <th scope="col" tabulator-formatter="html" tabulator-visible="false">XML-TEI</th>
+                     <th scope="col" tabulator-headerFilter="input" tabulator-responsive="1">TPQ</th>
                      <th scope="col" tabulator-visible="false">TAQ</th>
-                     <th scope="col">Liturgie</th>
-                     <th scope="col">Book Type</th>
+                     <th scope="col" tabulator-responsive="2" tabulator-headerFilter="input">Liturgie</th>
+                     <th scope="col" tabulator-responsive="3" tabulator-headerFilter="input">Book Type</th>
                      <th scope="col" tabulator-formatter="html" tabulator-visible="false">Provenienz</th>
                      <th scope="col" tabulator-formatter="html" tabulator-visible="false">Drucker</th>
                      <th scope="col" tabulator-visible="false">Folia</th>
