deploy: 844fceeaff04ffe34a86ab697f1805098ce60c62

--- a/Pezzana.html
+++ b/Pezzana.html
@@ -101,7 +101,8 @@
                         </th>
                      <td>
                         <ul>
-                           <li><a href="S1_69.html">Antiphonarium de Sanctis Trium Ordinum Sancti Patris Francisci</a></li>
+                           <li><a href="S1_69.html">Antiphonarium de Sanctis Trium Ordinum Sancti Patris
+                                 Francisci</a></li>
                            <li><a href="S1_64.html">Psalterium Romanum dispositum per Hebdomadam</a></li>
                         </ul>
                      </td>
