--- a/Voigt.html
+++ b/Voigt.html
@@ -101,8 +101,10 @@
                         </th>
                      <td>
                         <ul>
-                           <li><a href="S1_74.html">Ordo agendorum et cantandorum in actibus processionalibus</a></li>
-                           <li><a href="S1_75.html">Ordo agendorum et cantandorum in actibus processionalibus</a></li>
+                           <li><a href="S1_74.html">Ordo agendorum et cantandorum in actibus
+                                 processionalibus</a></li>
+                           <li><a href="S1_75.html">Ordo agendorum et cantandorum in actibus
+                                 processionalibus</a></li>
                         </ul>
                      </td>
                   </tr>
