--- a/toc.html
+++ b/toc.html
@@ -1295,26 +1295,29 @@
                      <td>In progress</td>
                   </tr>
                   <tr>
-                     <td><a href="A67_21.html">A 67/22</a></td>
+                     <td><a href="A67_21.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></td>
                      <td><a href="A67_21.xml">A67_21.xml</a></td>
-                     <td>1450</td>
-                     <td>1500</td>
+                     <td>1685</td>
+                     <td>1685</td>
                      <td>
-                        OSC
+                        OFM
                         </td>
                      <td>
-                        Graduale
-                        , 
-                        Teil
+                        Hymnarium
                         </td>
-                     <td><a href="Muenchen.html">München?</a>, <a href="Graz.html">Graz</a></td>
-                     <td>[Handschrift]</td>
-                     <td>136</td>
-                     <td>210</td>
-                     <td>160</td>
+                     <td><a href="Salzburg.html">Salzburg</a></td>
+                     <td><a href="Mayr.html">Johann Baptist Mayr</a></td>
+                     <td>309</td>
+                     <td>487</td>
+                     <td>331</td>
                      <td>
                         
-                        Graduale, Teil 4
+                        Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti: Festa nova omnia
+                        in hunc usque annum a Summis Pontificibus concessa. Officium defunctorum, Psalmi Graduales
+                        et Poenitentiales ..., mit Anhang: Hymni proprii Sanctorum Trium Ordinum Fratrum Minorum
+                        S. P. Francisci
+                        
+                        Hymnarium Romanum
                         </td>
                      <td>In progress</td>
                   </tr>
