--- a/Mayr.html
+++ b/Mayr.html
@@ -100,11 +100,15 @@
                         </th>
                      <td>
                         <ul>
-                           <li><a href="S1_62.html">Hymnarium Sacrum tam Romanum Urbani Papae VIII recognitum</a></li>
+                           <li><a href="S1_62.html">Hymnarium Sacrum tam Romanum Urbani Papae VIII
+                                 recognitum</a></li>
                            <li><a href="S1_72.html">S 1/72</a></li>
-                           <li><a href="S1_61.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
-                           <li><a href="S1_63.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
-                           <li><a href="S1_70.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                           <li><a href="S1_61.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate
+                                 recogniti</a></li>
+                           <li><a href="S1_63.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate
+                                 recogniti</a></li>
+                           <li><a href="S1_70.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate
+                                 recogniti</a></li>
                         </ul>
                      </td>
                   </tr>
