--- a/search.html
+++ b/search.html
@@ -73,10 +73,17 @@
                         <h4>Volltextsuche</h4>
                         <div id="searchbox"></div>
                         <div id="clear-refinements"></div>
-                        <h4>Beteiligte Personen</h4>
+                        <h4>Gattung</h4>
+                        <div id="refinement-list-genre"></div>
+                        <h4>Drucker</h4>
                         <div id="refinement-list-persons"></div>
                         <h4>Dokumente</h4>
                         <div id="refinement-list-doc-title"></div>
+                        <h4>Dokumententyp</h4>
+                        <div id="refinement-list-doc-type"></div>
+                        <h4>Materialart</h4>
+                        <div id="refinement-list-doc-material"></div> --&gt;
+                        
                         <h4>Datum</h4>
                         <div id="refinement-range-year"></div>
                      </div>
@@ -123,8 +130,5 @@
          </div>
       </footer>
       <div  class="footer-imprint-bar hide-reading" id="wrapper-footer-secondary" style="text-align:center; padding:0.4rem 0; font-size: 0.9rem;"> © Copyright OEAW | <a href="imprint.html">Impressum</a></div><script  src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script  src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script><script  src="js/listStopProp.js"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script><script  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script><script  src="js/i18n.js"></script><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@8.1.0/themes/algolia-min.css">
-      <link rel="stylesheet" href="css/ts_search.css"><script src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script>
-      script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.66.0/dist/instantsearch.production.min.js"
-      /&gt;
-      <script src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script src="js/ts_search.js"></script><script src="js/ts_update_url.js"></script><script src="js/ts_index.js"></script></body>
+      <link rel="stylesheet" href="css/ts_search.css"><script src="https://cdn.jsdelivr.net/npm/typesense-instantsearch-adapter@2/dist/typesense-instantsearch-adapter.min.js"></script><script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.66.0/dist/instantsearch.production.min.js"></script><script src="js/ts_search.js"></script><script src="js/ts_update_url.js"></script></body>
 </html>
