deploy: 3ac9b98b19f1015ededdc3b76be3f99dfb2ad9db

--- a/Venedig.html
+++ b/Venedig.html
@@ -78,7 +78,7 @@
                      <th> Authority </th>
                      <td>
                         <ul>
-                           <li><a href="http://d-nb.info/gnd/4062501-1/4062501-1">GND</a></li>
+                           <li><a href="http://d-nb.info/gnd/4076982-3">GND</a></li>
                            <li><a href="https://sws.geonames.org/3164603">GEONAMES</a></li>
                            <li><a href="https://www.wikidata.org/entity/Q641">WIKIDATA</a></li>
                         </ul>
