--- a/listplace.html
+++ b/listplace.html
@@ -180,7 +180,7 @@
                         <td> # Salzburg</td>
                         <td>
                            <ul>
-                              <li><a href="http://d-nb.info/gnd/4062501-1">GND</a></li>
+                              <li><a href="https://d-nb.info/gnd/4076982-3">GND</a></li>
                               <li><a href="https://sws.geonames.org/2766818">GEONAMES</a></li>
                               <li><a href="http://www.wikidata.org/entity/Q34713">WIKIDATA</a></li>
                            </ul>
@@ -202,7 +202,7 @@
                         <td> # Venedig</td>
                         <td>
                            <ul>
-                              <li><a href="http://d-nb.info/gnd/4062501-1/4062501-1">GND</a></li>
+                              <li><a href="http://d-nb.info/gnd/4076982-3">GND</a></li>
                               <li><a href="https://sws.geonames.org/3164603">GEONAMES</a></li>
                               <li><a href="https://www.wikidata.org/entity/Q641">WIKIDATA</a></li>
                            </ul>
