--- a/Salzburg.html
+++ b/Salzburg.html
@@ -78,7 +78,7 @@
                      <th> Authority </th>
                      <td>
                         <ul>
-                           <li><a href="http://d-nb.info/gnd/4062501-1">GND</a></li>
+                           <li><a href="https://d-nb.info/gnd/4076982-3">GND</a></li>
                            <li><a href="https://sws.geonames.org/2766818">GEONAMES</a></li>
                            <li><a href="http://www.wikidata.org/entity/Q34713">WIKIDATA</a></li>
                         </ul>
