--- a/toc.html
+++ b/toc.html
@@ -55,7 +55,8 @@
                            <li><a class="dropdown-item" href="listperson.html" data-i18n="navbar__persons"></a></li>
                         </ul>
                      </li>
-                     <li class="nav-item"><a title="Suche" class="nav-link" href="search.html" data-i18n="navbar__search"></a></li><select name="language" id="languageSwitcher"></select></ul>
+                     <li class="nav-item"><a title="Suche" class="nav-link" href="search.html" data-i18n="navbar__search"></a></li>
+                  </ul>
                </div>
             </div>
          </nav>
