deploy: fc8c854bc6e2513c3ea4ef81262961dd0f76c938

--- a/A63_51.html
+++ b/A63_51.html
@@ -82,6 +82,9 @@
                      <li class="dropdown-item">
                         <font-family opt="ff"></font-family>
                      </li>
+                     <li class="dropdown-item" style="border-top: 2px dashed lightgrey !important;">
+                        <annotation-slider opt="entities-features"></annotation-slider>
+                     </li>
                      <li class="dropdown-item">
                         <annotation-slider opt="not"></annotation-slider>
                      </li>
