--- a/S1_74.html
+++ b/S1_74.html
@@ -82,6 +82,9 @@
                      <li class="dropdown-item">
                         <font-family opt="ff"></font-family>
                      </li>
+                     <li class="dropdown-item" style="border-top: 2px dashed lightgrey !important;">
+                        <annotation-slider opt="entities-features"></annotation-slider>
+                     </li>
                      <li class="dropdown-item">
                         <annotation-slider opt="not"></annotation-slider>
                      </li>
