deploy: 70b53ce4af7f1a0f20fccc9ef7e985b1bb082046

--- a/Graz.html
+++ b/Graz.html
@@ -76,7 +76,7 @@
                      <td>Österreich</td>
                   </tr>
                   <tr>
-                     <th> Authority </th>
+                     <th> Normdaten </th>
                      <td>
                         <ul>
                            <li><a href="http://d-nb.info/gnd/4021912-4">GND</a></li>
@@ -86,15 +86,15 @@
                      </td>
                   </tr>
                   <tr>
-                     <th> Latitude </th>
+                     <th> Breite </th>
                      <td>47.07083333333333</td>
                   </tr>
                   <tr>
-                     <th> Longitude </th>
+                     <th> Länge </th>
                      <td>15.438611111111111</td>
                   </tr>
                   <tr>
-                     <th> Erwähnt in </th>
+                     <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
                            <li><a href="A67_41.html">Das 4. Respons Buch</a></li>
