--- a/MauterninSteiermark.html
+++ b/MauterninSteiermark.html
@@ -76,7 +76,7 @@
                      <td>Österreich</td>
                   </tr>
                   <tr>
-                     <th> Authority </th>
+                     <th> Normdaten </th>
                      <td>
                         <ul>
                            <li><a href="http://d-nb.info/gnd/4115047-8">GND</a></li>
@@ -86,15 +86,15 @@
                      </td>
                   </tr>
                   <tr>
-                     <th> Latitude </th>
+                     <th> Breite </th>
                      <td>47.4</td>
                   </tr>
                   <tr>
-                     <th> Longitude </th>
+                     <th> Länge </th>
                      <td>14.833333333333</td>
                   </tr>
                   <tr>
-                     <th> Erwähnt in </th>
+                     <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
                            <li><a href="S1_23.html">S 1/23</a></li>
