--- a/Wien.html
+++ b/Wien.html
@@ -76,7 +76,7 @@
                      <td>Österreich</td>
                   </tr>
                   <tr>
-                     <th> Authority </th>
+                     <th> Normdaten </th>
                      <td>
                         <ul>
                            <li><a href="http://d-nb.info/gnd/4066009-6">GND</a></li>
@@ -86,15 +86,15 @@
                      </td>
                   </tr>
                   <tr>
-                     <th> Latitude </th>
+                     <th> Breite </th>
                      <td>48.208333333333336</td>
                   </tr>
                   <tr>
-                     <th> Longitude </th>
+                     <th> Länge </th>
                      <td>16.3725</td>
                   </tr>
                   <tr>
-                     <th> Erwähnt in </th>
+                     <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
                            <li><a href="A64_41.html">A 70/41</a></li>
