--- a/Ljubljana.html
+++ b/Ljubljana.html
@@ -76,7 +76,7 @@
                      <td>Slovenien</td>
                   </tr>
                   <tr>
-                     <th> Authority </th>
+                     <th> Normdaten </th>
                      <td>
                         <ul>
                            <li><a href="http://d-nb.info/gnd/4073953-3">GND</a></li>
@@ -86,15 +86,15 @@
                      </td>
                   </tr>
                   <tr>
-                     <th> Latitude </th>
+                     <th> Breite </th>
                      <td>46.05138888888889</td>
                   </tr>
                   <tr>
-                     <th> Longitude </th>
+                     <th> Länge </th>
                      <td>14.50611111111111</td>
                   </tr>
                   <tr>
-                     <th> Erwähnt in </th>
+                     <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
                            <li><a href="A64_41.html">A 64/41</a></li>
