--- a/StPoelten.html
+++ b/StPoelten.html
@@ -76,7 +76,7 @@
                      <td>Österreich</td>
                   </tr>
                   <tr>
-                     <th> Authority </th>
+                     <th> Normdaten </th>
                      <td>
                         <ul>
                            <li><a href="http://d-nb.info/gnd/4051622-2">GND</a></li>
@@ -86,15 +86,15 @@
                      </td>
                   </tr>
                   <tr>
-                     <th> Latitude </th>
+                     <th> Breite </th>
                      <td>48.2</td>
                   </tr>
                   <tr>
-                     <th> Longitude </th>
+                     <th> Länge </th>
                      <td>15.616666666667</td>
                   </tr>
                   <tr>
-                     <th> Erwähnt in </th>
+                     <th> Von ihm gedruckt </th>
                      <td>
                         <ul>
                            <li><a href="A67_44.html">A 67/44</a></li>
