--- a/MariaLankowitz.html
+++ b/MariaLankowitz.html
@@ -76,7 +76,7 @@
                      <td>Österreich</td>
                   </tr>
                   <tr>
-                     <th> Normdaten </th>
+                     <th> Authority </th>
                      <td>
                         <ul>
                            <li><a href="http://d-nb.info/gnd/4400654-8">GND</a></li>
@@ -86,15 +86,15 @@
                      </td>
                   </tr>
                   <tr>
-                     <th> Breite </th>
+                     <th> Latitude </th>
                      <td>47.063888888889</td>
                   </tr>
                   <tr>
-                     <th> Länge </th>
+                     <th> Longitude </th>
                      <td>15.063055555556</td>
                   </tr>
                   <tr>
-                     <th> Von ihm gedruckt </th>
+                     <th> Erwähnt in </th>
                      <td>
                         <ul>
                            <li><a href="A64_37.html">A 64/37</a></li>
