--- a/Muenchen.html
+++ b/Muenchen.html
@@ -76,7 +76,7 @@
                      <td>Deutschland</td>
                   </tr>
                   <tr>
-                     <th> Normdaten </th>
+                     <th> Authority </th>
                      <td>
                         <ul>
                            <li><a href="http://d-nb.info/gnd/4127793-4">GND</a></li>
@@ -86,15 +86,15 @@
                      </td>
                   </tr>
                   <tr>
-                     <th> Breite </th>
+                     <th> Latitude </th>
                      <td>48.1375</td>
                   </tr>
                   <tr>
-                     <th> Länge </th>
+                     <th> Longitude </th>
                      <td>11.575</td>
                   </tr>
                   <tr>
-                     <th> Von ihm gedruckt </th>
+                     <th> Erwähnt in </th>
                      <td>
                         <ul>
                            <li><a href="A67_23.html">A 67/23</a></li>
