--- a/Salzburg.html
+++ b/Salzburg.html
@@ -76,7 +76,7 @@
                      <td>Österreich</td>
                   </tr>
                   <tr>
-                     <th> Normdaten </th>
+                     <th> Authority </th>
                      <td>
                         <ul>
                            <li><a href="https://d-nb.info/gnd/4076982-3">GND</a></li>
@@ -86,15 +86,15 @@
                      </td>
                   </tr>
                   <tr>
-                     <th> Breite </th>
+                     <th> Latitude </th>
                      <td>47.8</td>
                   </tr>
                   <tr>
-                     <th> Länge </th>
+                     <th> Longitude </th>
                      <td>13.045</td>
                   </tr>
                   <tr>
-                     <th> Von ihm gedruckt </th>
+                     <th> Erwähnt in </th>
                      <td>
                         <ul>
                            <li><a href="S1_63.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
